--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.application.name=spliteasy-backend
 
-spring.datasource.url=jdbc:postgresql://dpg-d1bo3feuk2gs739use60-a.oregon-postgres.render.com/backendapp_77h7
-spring.datasource.username=backendapp_77h7_user
-spring.datasource.password=UCGoAeghHxFxPqcAHHqpAc6U01JCRD1M
+spring.datasource.url=jdbc:postgresql://dpg-d2n1dqhr0fns73caelf0-a.oregon-postgres.render.com:5432/spliteasydb?sslmode=require
+spring.datasource.username=spliteasydb_user
+spring.datasource.password=L0KPvvJdCW2FjtvhrW3OjQe4QfyFvr8B
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
